--- a/_attachments/settings.html
+++ b/_attachments/settings.html
@@ -20,7 +20,7 @@
   <script src="/_utils/script/json2.js"></script>
   <script src="/_utils/script/jquery.js?1.2.6"></script>
   <script src="/_utils/script/jquery.couch.js?0.8.0"></script>
-  <script src="/_utils/script/jquery.cookies.js"></script>
+  <script src="jquery.cookies.js"></script>
   <script src="jquery.xdompost.js"></script>
   <script src="twitter-couch.js"></script>
   <script type="text/javascript" charset="utf-8">
